OAR CHANGELOG
=============

version 2.0.0++ enhanced:
-------------------------

    - Now you can connect to your jobs (not only for reservations).
    - Add "cosystem" job type (execute and do nothing for these jobs).
    - New scheduler : "oar_sched_gantt_with_timesharing". You can specify jobs with the type "timesharing" that indicates that this scheduler can launch more than 1 job on a resource at a time. It is possible to restrict this feature with words "user and name". For example, '-t timesharing=user,name' indicates that only a job from the same user with the same name can be launched in the same time than it.
    - Add PostGresSQL support. So there is a choice to make between MySQL and PostgresSQL. 
    - New approach for the scheduling : administrators have to insert into the databases descriptions about resources and not nodes. Resources have a network address (physical node) and properties. For example, if you have dual-processor, then you can create 2 different resources with the same natwork address but with 2 different processor names.
    - The scheduler can now handle resource properties in a hierarchical manner. Thus, for example, you can do "oarsub -l /switch=1/cpu=5" which submit a job on 5 processors on the same switch.
    - Add a signal handler in oarexec and propagate this signal to the user process.
    - Support '#OAR -p ...' options in user script.
    - Add in oar.conf:
        * DB_BASE_PASSWD_RO : for security issues, it is possible to execute request with parts specified by users with a read only account (like "-p" option).
        * OARSUB_DEFAULT_RESOURCES : when nothing is specified with the oarsub command then OAR takes this default resource description.
        * OAREXEC_DEBUG_MODE : turn on or off debug mode in oarexec (create /tmp/oar/oar.log on nodes).
        * FINAUD_FREQUENCY : indicates the frequency when OAR launchs Finaud (search dead nodes).