@@ -21,43 +21,15 @@ if (!defined($Deploy_hostname)){
     $Deploy_hostname = $Server_hostname;
 }
 
+my $Cosystem_hostname = get_conf("COSYSTEM_HOSTNAME");
+if (!defined($Cosystem_hostname)){
+    $Cosystem_hostname = $Server_hostname;
+}
+
 my $Server_epilogue = get_conf("SERVER_EPILOGUE_EXEC_FILE");
 
 my $Openssh_cmd = get_conf("OPENSSH_CMD");
 $Openssh_cmd = oar_Tools::get_default_openssh_cmd() if (!defined($Openssh_cmd));
-
-# arg1 --> host+pid of bipbip process
-# return -1 if the ssh connection timed out, else return the return code of the command kill
-#sub killbipbip($){
-#    my $hostpid=shift;
-#
-#    my ($host,$pid)=split /:/, $hostpid;
-#    my $cmd = "oarkill $pid";
-#    my $res=0;
-#    if($host eq hostname ){
-#        oar_warn("[Leon] Kill local bipbip with : $cmd\n");
-#        #$res=forkexecwait("$cmd");
-#        system("$cmd");
-#        $res = $? >> 8;
-#    }else{
-#        oar_warn("[Leon] Kill remote bipbip : go on $host and execute : $cmd\n");
-#        eval {
-#            $SIG{ALRM} = sub { die "alarm\n" };
-#            alarm(oar_Tools::get_ssh_timeout());
-#            #$res=forkexecwait("ssh -qx $host \"$cmd\"");
-#            system("ssh -x $host \"$cmd\"");
-#            $res = $? >> 8;
-#            alarm(0);
-#        };
-#        if ($@){
-#            if ($@ eq "alarm\n"){
-#                oar_error("[Leon] Killbipbip : ssh timeout $?, on node $host\n");
-#                $res=-1;
-#            }
-#        }
-#    }
-#    return($res);
-#}
 
 my $Exit_code = 0;
 
@@ -92,17 +64,15 @@ foreach my $j (iolib::get_to_kill_jobs($base)){
         oar_debug("[Leon] Job is terminated or is terminating I do nothing\n");
     }else{
         my $types = iolib::get_current_job_types($base,$j->{job_id});
-        if (defined($types->{cosystem})){
-            iolib::set_job_state($base,$j->{job_id},"Terminated");
-            iolib::set_finish_date($base,$j->{job_id});
-        }
         my @hosts = iolib::get_job_current_hostnames($base,$j->{job_id});
         my $host_to_connect_via_ssh = $hosts[0];
-        #deploy part
-        if (defined($types->{deploy})){
+        #deploy, cosystem and no host part
+        if ((defined($types->{cosystem})) or ($#hosts < 0)){
+            $host_to_connect_via_ssh = $Cosystem_hostname;
+        }elsif (defined($types->{deploy})){
             $host_to_connect_via_ssh = $Deploy_hostname;
         }
-        #deploy part
+        #deploy, cosystem and no host part
         if (defined($host_to_connect_via_ssh)){
             iolib::add_new_event($base,"SEND_KILL_JOB",$j->{job_id},"[Leon] Send kill signal to oarexec on $host_to_connect_via_ssh for the job $j->{job_id}");
             oar_Tools::signal_oarexec($host_to_connect_via_ssh, $j->{job_id}, "TERM", 0, $base, $Openssh_cmd);
@@ -113,15 +83,6 @@ foreach my $j (iolib::get_to_kill_jobs($base)){
 
 #I treate jobs in state EXTERMINATED in the table fragJobs
 foreach my $j (iolib::get_to_exterminate_jobs($base)){
-    #my $bipbippid = $j->{bpid};
-    #if (defined($bipbippid) && ($bipbippid ne "")){
-    #    my $result_kill_bipbip = 0;
-    #    #$result_kill_bipbip = killbipbip($bipbippid);
-    #    if ($result_kill_bipbip == -1){
-    #        iolib::add_new_event($base,"LEON_KILL_BIPBIP_TIMEOUT",$j->{job_id},"[Leon] kill bipbip with $bipbippid for the job $j->{job_id} and ssh timeouts");
-    #    }
-    #}
-
     iolib::set_job_state($base,$j->{job_id},"Finishing");
     if ($j->{start_time} == 0){
         iolib::set_running_date($base,$j->{job_id});
@@ -130,13 +91,6 @@ foreach my $j (iolib::get_to_exterminate_jobs($base)){
     iolib::set_job_message($base,$j->{job_id},"job exterminated by Leon");
     iolib::job_arm_leon_timer($base,$j->{job_id});
     $Exit_code = 2;
-
-    my $types = iolib::get_current_job_types($base,$j->{job_id});
-    if (defined($types->{cosystem})){
-        iolib::set_job_state($base,$j->{job_id},"Error");
-        iolib::set_finish_date($base,$j->{job_id});
-        next;
-    }
 
     $SIG{PIPE}  = 'IGNORE';
     my $pid = fork();
