@@ -28,8 +28,11 @@ SERVER_PORT=6666
 # when the user does not specify a -l option then oar use this
 OARSUB_DEFAULT_RESOURCES = /resource_id=1
 
-# Specify where we are connected in the deploy queue
+# Specify where we are connected with a job of the deploy type
 DEPLOY_HOSTNAME = 127.0.0.1
+
+# Specify where we are connected with a job of the cosystem type
+COSYSTEM_HOSTNAME = 127.0.0.1
 
 # If you want to free a process per job on the server you can change this tag
 #into 1 (you must enable all nodes to connect to SERVER_PORT on the SERVER_HOSTNAME)
